# docs/swagger.yaml
@@ -87,6 +87,7 @@ definitions:
     - 1015
     - 1016
     - 1017
+    - 1018
     type: integer
     x-enum-varnames:
     - CodeSuccess
@@ -107,6 +108,7 @@ definitions:
     - CodeTagNotExisted
     - CodeClassNotExisted
     - CodeClassNameExisted
+    - CodeCreateCommentFailed
   controller.ResponseData:
     properties:
       code:
@@ -123,6 +125,40 @@ definitions:
         type: string
     required:
     - name
+    type: object
+  models.CommentCreateFormParams:
+    properties:
+      article_id:
+        description: 被评论的文章ID
+        example: "0"
+        type: string
+      content:
+        description: 评论内容
+        type: string
+      email:
+        description: 评论人的邮箱 - 不强制要求
+        type: string
+      parent_comment_id:
+        description: RootCommentId   uint   `json:"root_comment_id,string"`   // 根评论的ID
+        example: "0"
+        type: string
+      status:
+        description: 评论状态：0-审核中 1-审核通过 2-审核未通过
+        type: integer
+      type:
+        description: 评论种类 1- 表示文章评论
+        type: integer
+      user_name:
+        description: 评论人名字 - 强制要求
+        type: string
+    type: object
+  models.CommentDeleteFormParams:
+    properties:
+      ids:
+        description: id列表
+        items:
+          type: integer
+        type: array
     type: object
   models.DeleteMultiArticleParams:
     properties:
@@ -200,9 +236,8 @@ definitions:
         - $ref: '#/definitions/models.PrivilegeType'
         description: 文章权限 0-公开 1-私有
       status:
-        allOf:
-        - $ref: '#/definitions/models.StatusType'
         description: 文章状态 0-草稿 1-发布 2-删除
+        type: integer
       summary:
         description: 文章的摘要信息
         type: string
@@ -224,18 +259,15 @@ definitions:
     type: object
   models.PrivilegeType:
     enum:
-    - 0
     - 1
     - 2
     type: integer
     x-enum-comments:
-      PrivilegeAll: 所有权限
-      PrivilegePrivte: 1- 当前文章私有，客户端不可见
-      PrivilegePublic: 0 - 当前文章是公开的，客户端可见（默认）
+      PrivilegePrivte: 2- 当前文章私有，客户端不可见
+      PrivilegePublic: 1 - 当前文章是公开的，客户端可见（默认）
     x-enum-varnames:
     - PrivilegePublic
     - PrivilegePrivte
-    - PrivilegeAll
   models.ResetPasswordParams:
     properties:
       email:
@@ -355,23 +387,6 @@ definitions:
     - del_flag
     - ids
     type: object
-  models.StatusType:
-    enum:
-    - 0
-    - 1
-    - 2
-    - 3
-    type: integer
-    x-enum-comments:
-      StatusAll: 所有状态
-      StatusCommit: 1 - 已经提交，外部可以访问（同时Privilege要为公开才可以）
-      StatusDelete: 2 - 预删除，处于这种状态外部不可见，但是数据仍然在数据库（类似垃圾回收站）
-      StatusDraft: 0 - 草稿
-    x-enum-varnames:
-    - StatusDraft
-    - StatusCommit
-    - StatusDelete
-    - StatusAll
   models.TagCreateFormParams:
     properties:
       desc:
@@ -413,9 +428,8 @@ definitions:
         - $ref: '#/definitions/models.PrivilegeType'
         description: 文章权限 0-公开 1-私有
       status:
-        allOf:
-        - $ref: '#/definitions/models.StatusType'
         description: 文章状态 0-草稿 1-发布 2-删除
+        type: integer
       summary:
         description: 文章的摘要信息
         type: string
@@ -619,6 +633,34 @@ paths:
         in: header
         name: Authorization
         required: true
+        type: string
+      - description: page
+        in: query
+        name: p
+        type: integer
+      - description: size
+        in: query
+        name: s
+        type: integer
+      - description: class
+        in: query
+        name: c
+        type: string
+      - description: tag
+        in: query
+        name: t
+        type: string
+      - description: name
+        in: query
+        name: "n"
+        type: string
+      - description: status
+        in: query
+        name: st
+        type: string
+      - description: privilege
+        in: query
+        name: pr
         type: string
       produces:
       - application/json
@@ -898,6 +940,128 @@ paths:
       summary: 获取所有类别（简略信息）的接口
       tags:
       - 类别相关接口
+  /comment:
+    post:
+      consumes:
+      - application/json
+      description: 通过该接口可以创建评论
+      parameters:
+      - description: 创建评论的参数
+        in: body
+        name: object
+        required: true
+        schema:
+          $ref: '#/definitions/models.CommentCreateFormParams'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: code=1000表示成功其余失败
+          schema:
+            $ref: '#/definitions/controller._ResponseNoDataArea'
+      security:
+      - ApiKeyAuth: []
+      summary: 创建评论Comment的接口
+      tags:
+      - 评论相关接口
+  /comment/:id:
+    delete:
+      consumes:
+      - application/json
+      description: 通过该接口可以删除单条评论
+      parameters:
+      - description: Bearer token(jwt)
+        in: header
+        name: Authorization
+        required: true
+        type: string
+      - description: 删除的评论的ID
+        in: path
+        name: id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: code=1000表示成功其余失败
+          schema:
+            $ref: '#/definitions/controller._ResponseNoDataArea'
+      security:
+      - ApiKeyAuth: []
+      summary: 删除单条评论Comment的接口
+      tags:
+      - 评论相关接口
+  /comments:
+    delete:
+      consumes:
+      - application/json
+      description: 通过该接口可以修改评论的状态
+      parameters:
+      - description: Bearer token(jwt)
+        in: header
+        name: Authorization
+        required: true
+        type: string
+      - description: 删除的评论的ID
+        in: body
+        name: object
+        required: true
+        schema:
+          $ref: '#/definitions/models.CommentDeleteFormParams'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: code=1000表示成功其余失败
+          schema:
+            $ref: '#/definitions/controller._ResponseNoDataArea'
+      security:
+      - ApiKeyAuth: []
+      summary: 修改指定评论的状态的接口
+      tags:
+      - 评论相关接口
+    get:
+      consumes:
+      - application/json
+      description: 通过该接口可以分页获取评论
+      parameters:
+      - description: 关键字
+        in: query
+        name: keyword
+        type: string
+      - description: 评论类型 1-文章
+        in: query
+        name: type
+        type: integer
+      - description: 对应的文章id
+        in: query
+        name: atc_id
+        type: string
+      - description: '状态: 1-审核中 2-审核通过 3-审核未通过'
+        in: query
+        name: status
+        type: integer
+      - description: 页号
+        in: query
+        name: page_idx
+        type: integer
+      - description: 每页大小
+        in: query
+        name: size
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: code=1000表示成功其余失败
+          schema:
+            $ref: '#/definitions/controller._ResponseNoDataArea'
+      security:
+      - ApiKeyAuth: []
+      summary: 分页获取评论的接口
+      tags:
+      - 评论相关接口
   /tag:
     delete:
       consumes:
